# drf_now

./: .env  .env_example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
conf/: celery.py  settings.py  urls.py
materials/: admin.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/management/commands/: load_mypedia.py
materials/migrations/: 0001_initial.py  0002_initial.py
src/: utils.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: create_superuser.py  load_payments.py  load_users.py  load_users_and_groups.py
users/migrations/: 0001_initial.py
