[tool.poetry]
name = "drf-now"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "5.1.4"
djangorestframework = "3.15.2"
psycopg2 = "2.9.10"
pillow = "11.1.0"
environs = "14.0.0"
django-filter = "24.3"
djangorestframework-simplejwt = "5.4.0"
coverage = "7.6.10"
drf-yasg = "^1.21.8"
stripe = "^11.4.1"
flake8 = "7.1.2"
gunicorn = "23.0.0"


#phonenumbers = "*"
black = "^25.1.0"


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
